--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,39 @@
 version: '2'
-services:
 
-  mysql:
-    image: mysql:5.7
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: prestashop
-    volumes:
-      - ./docker/mysql:/docker-entrypoint-initdb.d
-    ports:
-      - "3306:3306"
-
-  app_dev:
-    build: ./docker/prestashop/
-    volumes : 
-      - ./prestashop/src/:/var/www/html:rw
-    restart: always
+services: 
+  prestashop:
+    image: prestashop/prestashop:1.7.6.5
     ports:
       - 80:80
     links:
-      - "mysql"
+      - mariadb:mariadb
+    depends_on:
+      - mariadb
+    volumes:
+      - ./src:/var/www/html
+    environment:
+      - PS_DEV_MODE=1
+      - DB_SERVER=mariadb
+      - DB_USER=root
+      - DB_PASSWD=root
+      - DB_NAME=prestashop
+      - PS_INSTALL_AUTO=0
+
+  mariadb:
+    image: mariadb
+    volumes:
+     - ./docker/mariadb:/docker-entrypoint-initdb.d
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=prestashop
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    links:
+      - mariadb
+    ports: 
+      - 81:80 
+    environment:
+      - PMA_HOST=mariadb
+      - PMA_USER=root
+      - PMA_PASSWORD=root
