--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services: 
   prestashop:
-    image: 172.20.83.35:5000/nr
+    image: 172.20.83.35:5000/3
     ports:
       - 80:80
       - 443:443
