--- a/docker/ssl/000-default.conf
+++ b/docker/ssl/000-default.conf
@@ -38,6 +38,6 @@
 
 <VirtualHost *:443>
 	DocumentRoot /var/www/html
-	SSLCertificateFile "/etc/apache2/ssl/prestashop.crt"
-	SSLCertificateKeyFile "/etc/apache2/ssl/prestashop.key"
+	SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
+	SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
 </VirtualHost>
