Add permanent redirect to https

--- a/docker/ssl/000-default.conf
+++ b/docker/ssl/000-default.conf
@@ -11,6 +11,8 @@
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/html
 		
+		Redirect permanent / https://localhost:25555
+		
 		 <Directory /var/www/html>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
