--- a/docker/ssl/000-default.conf
+++ b/docker/ssl/000-default.conf
@@ -10,12 +10,6 @@
 
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/html
-		
-		 <Directory /var/www/html>
-			Options Indexes FollowSymLinks MultiViews
-			AllowOverride All
-			Require all granted
-		</Directory>
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
@@ -29,15 +23,27 @@
         # For most configuration files from conf-available/, which are
         # enabled or disabled at a global level, it is possible to
         # include a line for only one particular virtual host. For example the
-        # following line enables the CGI configuration for this host only
+		# following line enables the CGI configuration for this host only
         # after it has been globally disabled with "a2disconf".
         #Include conf-available/serve-cgi-bin.conf
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
-
-<VirtualHost *:443>
-	DocumentRoot /var/www/html
-	SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
-	SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
-</VirtualHost>
+		
+<IfModule mod_ssl.c>
+	<VirtualHost *:443>
+	ServerName localhost
+	
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	
+	<Directory /var/www/html>
+		AllowOverride All
+		Require all granted
+	</Directory>
+		SSLEngine on
+		SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
+		SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
+		
+	</VirtualHost>
+</IfModule>
